--- a/app/src/main/res/layout/tab_fragment_nearby_restaurant_list.xml
+++ b/app/src/main/res/layout/tab_fragment_nearby_restaurant_list.xml
@@ -1,44 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+ <android.support.v7.widget.CardView
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginLeft="10dp"
+     android:layout_marginRight="10dp"
+     android:layout_marginTop="5dp"
+     android:layout_marginBottom="2dp"
+     android:elevation="10dp"
+     app:cardCornerRadius="10dp"
+     app:cardElevation="200dp">
+     <LinearLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+         <ImageView
+             android:layout_width="421dp"
+             android:layout_height="102dp"
+             android:src="@drawable/megpai" />
+         <TextView
+             android:id="@+id/tv_item_number"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:fontFamily="monospace"
+             android:textSize="12sp"
+             android:layout_gravity="center"/>
 
-        <ImageView
-            android:layout_width="421dp"
-            android:layout_height="102dp"
-            android:src="@drawable/megpai" />
+     </LinearLayout>
+     <ImageView
+         android:layout_width="50dp"
+         android:layout_height="50dp"
+         android:layout_marginLeft="130dp"
+         android:background="@drawable/imgae_round_background"
+         android:src="@drawable/beverageicon"/>
+     <TextView
+         android:layout_width="40dp"
+         android:layout_height="20dp"
+         android:layout_marginTop="60dp"
+         android:layout_marginLeft="255dp"
+         android:text="Ok"
+         android:textSize="12sp"
+         android:background="@drawable/textview_background_shape" />
 
-        <TextView
-            android:id="@+id/tv_item_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="monospace"
-            android:textSize="12sp"
-            android:layout_gravity="center"/>
+ </android.support.v7.widget.CardView>
 
-    </LinearLayout>
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="130dp"
-        android:background="@drawable/imgae_round_background"
-        android:src="@drawable/beverageicon"/>
-    <TextView
-        android:layout_width="40dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="255dp"
-        android:text="Ok"
-        android:textSize="12sp"
-        android:background="@drawable/textview_background_shape"
-        />
 
 
 
