--- a/app/src/main/res/layout/activity_input_details.xml
+++ b/app/src/main/res/layout/activity_input_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFCC00"
-android:gravity="center"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".SignUpPage">
 
@@ -16,52 +16,50 @@ android:gravity="center"
         android:layout_height="185dp"
         android:layout_gravity="top"
         app:srcCompat="@drawable/ppeeplogo3"
-
-
         />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-android:layout_margin="50dp"
-    android:orientation="vertical"
-    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:orientation="vertical">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="40dp"
-    android:text="Enter Your Name"
-    android:textSize="30sp"
-    android:textStyle="bold"
-    android:textColor="#0C0C0C"
-    android:layout_marginBottom="10dp"
-  />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Enter Your Name"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="#0C0C0C"
+            android:layout_marginBottom="10dp"/>
 
-    <EditText
-        android:id="@+id/name_input"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
+        <EditText
+            android:id="@+id/name_input"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:hint="Full Name"
+            android:textCursorDrawable="@drawable/color_cursor"
+            android:backgroundTint="#030303"
+            android:inputType="text"
+            android:textSize="20sp" />
 
-        android:hint="Full Name"
-android:textCursorDrawable="@drawable/color_cursor"
-        android:backgroundTint="#030303"
-        android:inputType="text"
-        android:textSize="20sp" />
-
-</LinearLayout>
+    </LinearLayout>
+    <!--<android.support.design.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="finish"/>-->
     <Button
         android:id="@+id/input_details"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:background="@drawable/button_shadow"
-
         android:text="finish"
         android:textAlignment="center"
         android:textColor="#0F0F0F"
-        android:textSize="25sp"
-
-        />
+        android:textSize="25sp" />
 
 
 
