--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:layout_centerInParent="true"
+    android:layout_centerInParent="true"
     android:background="@color/backgroundfragment"
     android:orientation="vertical">
 
@@ -12,15 +12,13 @@ android:layout_centerInParent="true"
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        >
+        android:gravity="center">
 
 
         <com.hitomi.cmlibrary.CircleMenu
             android:id="@+id/circleMenuId"
             android:layout_width="wrap_content"
             android:layout_height="320dp"
-
             android:layout_marginTop="90dp"
             android:gravity="center"
             android:scaleX="1.5"
