--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,17 +5,12 @@
     android:layout_height="160dp"
     android:orientation="vertical"
     android:background="#ffcc00"
-    android:padding="20dp"
-
-    >
-
+    android:padding="20dp">
 
     <ImageView
         android:src="@drawable/iconppeep2"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
-
-        />
+        android:layout_height="80dp" />
 
     <TextView
         android:id="@+id/profile_name"
@@ -25,9 +20,7 @@
         android:textSize="20sp"
         android:textColor="#090C0E"
         android:textStyle="bold"
-        android:paddingTop="8dp"
-
-        />
+        android:paddingTop="8dp" />
 
 
 
