--- a/app/src/main/res/layout/activity_checkout_cart.xml
+++ b/app/src/main/res/layout/activity_checkout_cart.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/alhamdulillah"
+            android:src="@drawable/burgerbackground"
             android:id="@+id/cart_food_pic"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
