--- a/app/src/main/res/layout/activity_food_app.xml
+++ b/app/src/main/res/layout/activity_food_app.xml
@@ -12,13 +12,16 @@
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:title="PPEEP FOOD"
+        app:title="PPEEP Food"
         android:gravity="center"
         android:theme="@style/AppTheme2"
         android:id="@+id/foodtoolbar"
         android:background="#FAFAF9"
 
-        ></android.support.v7.widget.Toolbar>
+        >
+
+
+    </android.support.v7.widget.Toolbar>
 
 
     <SearchView
@@ -390,12 +393,9 @@
 
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
         android:orientation="vertical">
 
         <android.support.design.widget.TabLayout
