--- a/app/src/main/res/layout/food_menu_item_list.xml
+++ b/app/src/main/res/layout/food_menu_item_list.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="55dip"
+    android:layout_height="55dp"
     android:orientation="vertical" >
 
 
     <TextView
         android:id="@+id/lblListItem"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="17dip"
+        android:textSize="17sp"
         android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="1dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
-    <RelativeLayout
+    <!--<TextView
+        android:id="@+id/tv_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="Price : "
+        android:textStyle="bold"
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />-->
+
+
+  <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -21,67 +31,54 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_alignParentRight="true"
-            >
+            android:layout_alignParentRight="true">
             <TextView
+                android:id="@+id/tv_item_id"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:textSize="15sp"
+                android:text="2"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>
+            <TextView
+                android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Price"
+                android:textSize="14sp"
+                android:text="Price : "
                 android:textStyle="bold"
-
-                />
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>
             <TextView
                 android:id="@+id/price_food"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="16dp"
                 android:text="100"
                 android:textStyle="bold"
-                android:textSize="10sp" />
+                android:textSize="14sp"
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>
             <TextView
-
+                android:id="@+id/tv_add_to_cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:textSize="14sp"
+                android:text="+ Add To Cart "
+                android:textColor="#26E42E"
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>
+           <!-- <Button
+                android:id="@+id/bt_addcart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="16dp"
-                android:text="Taka"
-                android:textStyle="bold"
-                android:textSize="10sp" />
-
-            <Button
-                android:id="@+id/decrease"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:onClick="decreaseInteger"
-                android:text="-"
-                android:textSize="10sp"/>
-
-            <TextView
-                android:id="@+id/integer_number"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp"
-                android:text="0"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textSize="10sp" />
-
-
-            <Button
-                android:id="@+id/increase"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:onClick="increaseInteger"
-                android:text="+"
-                android:textSize="10sp"/>
-
+                android:textColor="@color/colorPrimary"
+                android:text="Add to Cart"
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>-->
         </LinearLayout>
-
     </RelativeLayout>
 </LinearLayout>
